--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slideshow-image": "^4.2.1",
+    "scss": "^0.2.4",
+    "styled-components": "^6.0.0-rc.1"
   }
 }
